--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "expect5.45.tar.gz": e634992cab35b7c6931e1f21fbb8f74d464bd496
+  expect5.45.4.tar.gz: a97b2f377c6a799928d6728c2ada55beb7f57d96
