--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  expect5.45.4.tar.gz: a97b2f377c6a799928d6728c2ada55beb7f57d96
+  expect-5.45.4.1.7z: f766ab169acb08eaec18457637811d5842fb999e
